--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -37,15 +37,12 @@
         }
 }
     .advantages {
-        padding: 60px 0 95px 0; 
+        padding: 60px 0 80px 0; 
         &__header {
             font-size: 28px;
         }
-        &__icons {
-            margin-top: 50px;
-        }
-        &__text {
-            width: 200px;
+        &__item {
+            max-width: 216px;
         }
     }
 @media (max-width: 767px) {
@@ -79,18 +76,26 @@
         height: 42px;
     }
     .advantages {
-        &__coments {
-            margin-top: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            
+        &__wrapper {
+            margin-top: 50px;
         }
-        &__text {
-            margin-top: 20px;
-            width: 90%;
+        .title {
+            font-size: 27px;
+        }
+        &__wrapper {
+            display: block;
+        }  
+        &__item {
+            max-width: 100%;
+        }
+        &__descr {
+            margin: 26px 0 20px 0;
+        }  
+        &__subtitle {
+            margin-top: 30px;
         }
     }
+    
 }
 @media (max-width: 575px) {
     .promo {
@@ -125,15 +130,9 @@
         } 
     }
     .advantages {
-        &__header {
-            font-size: 22px;
-        }
-        &__icon {
-            font-size: 15px;
-        }
-        &__text {
-            font-size: 16px;
-        }
+        .title {
+            font-size: 21px;
+        } 
     }
     .button {
         width: 110px;
