--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,6 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/media';
-@import 'blocks/titles'
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
