--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -24,3 +24,43 @@
     font-weight: 700;
     font-style: normal;
 }
+
+/* @font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?nwji6m');
+    src:  url('../fonts/icomoon.eot?nwji6m#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?nwji6m') format('truetype'),
+      url('../fonts/icomoon.woff?nwji6m') format('woff'),
+      url('../fonts/icomoon.svg?nwji6m#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-facebook:before {
+    content: "\e900";
+    color: #fff;
+  }
+  .icon-instagram:before {
+    content: "\e901";
+    color: #fff;
+  }
+  .icon-pinterest:before {
+    content: "\e902";
+    color: #fff;
+  } */
