--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,9 @@
     font-weight: 500;
     text-align: center;
     text-transform: uppercase;
+    &:hover {
+        background-color: #8B0000;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
