--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,6 @@
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
-@import 'blocks/catalog.scss'
+@import 'blocks/catalog.scss';
+@import 'blocks/coments.scss';
+@import 'blocks/footer';
