--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -137,7 +137,7 @@
                 transform: translateX(-100%);
                 margin-left: 0px;
             }
-            li {
+            p {
                 position: relative;
                 color: #555555;
                 font-size: 14px;
