--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,4 +9,13 @@
         font-weight: 500;
         text-align: left;
     }
+    .error { /* стилизация скриптовых сообщений о валидации */
+        border: 1px solid red;
+    }
+    label.error {
+        color:  #fff;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
