--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,3 +18,5 @@
 @import 'blocks/catalog.scss';
 @import 'blocks/coments.scss';
 @import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/pageup';
