final version with adaptation and new slider

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,7 +10,7 @@
     text-align: center;
     text-transform: uppercase;
     &:hover {
-        background-color: #8B0000;
+        background-color: #a18282;
     }
     &_main {
         margin-top: 67px;
