--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,6 +1,6 @@
 @media (max-width: 1200px) {
     .container {
-        max-width: 100vh;
+        max-width: 90%;
     }
     .promo {
         &__header {
@@ -18,9 +18,6 @@
 }
 
 @media (max-width: 991px) {
-    .container {
-        max-width: 90%;
-    }
     .promo {
         &__wrapper {
             margin-top: 60px;
@@ -57,9 +54,18 @@
             font-size: 30px;
         }
     }
-    .slick-slide img {
-        max-width: 80%;
-        margin: auto;
+    .carousel {
+        width: 730px;
+        margin: 0 auto;
+        .container {
+            max-width: 100%;
+        }
+        &__inner {
+            img {
+                max-width: 730px;
+                margin: 0 auto; 
+            }
+        }
     }
 }    
 @media (max-width: 767px) {
@@ -121,7 +127,7 @@
             font-size: 22px;
             text-align: center;
         }
-    }
+    }  
     .feed-form {
         margin: 36px auto 0 auto;
     } 
@@ -130,7 +136,34 @@
             flex-direction: column;
             align-content: center;
         }
-    }   
+    } 
+    .carousel {
+        max-width: 450px;
+        &__inner{
+            img {
+                max-width: 450px;
+                margin: 0 auto;
+            }
+        }
+    } 
+    .coments {
+        &__item {
+            flex-direction: column;
+        }
+        .coments__wrapper {
+            margin-left: 0;
+        }
+        &__subtitle {
+            margin-top: 20px;
+            text-align: center;
+        }
+        &__descr {
+            text-align: center;
+        }
+        &__text {
+            text-align: center;
+        }
+    } 
 }
 @media (max-width: 575px) {
     .promo {
@@ -194,6 +227,56 @@
         width: 165px;
         height: 45px;
         font-size: 11px;
+    } 
+    .carousel {
+        max-width: 450px;
+        &__inner{
+            img {
+                max-width: 450px;
+                margin: 0 auto;
+            }
+        }
     }  
+    .catalog {
+        &__tabs {
+            flex-direction: column;
+            :nth-child(2) {
+                margin: 10px 0 10px 0;
+            }
+        }
+    }
 
+}
+@media (max-width: 499px) {
+    .carousel{
+        max-width: 350px;
+        &__inner{
+            img {
+                max-width: 350px;
+                margin: 0 auto;
+            }
+        }
+    }   
+}
+@media (max-width: 399px) {
+    .carousel{
+        max-width: 250px;
+        &__inner{
+            img {
+                max-width: 250px;
+                margin: 0 auto;
+            }
+        }
+    }
+    .footer {
+        &__info {
+            max-width: 90%;
+        }
+    .footer__adr {
+            font-size: 15px;
+        }
+    .footer__phone {
+        font-size: 18px;
+    }
+    }   
 }
